packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/res-005-attr-unbound.ttrp
// expect: TTRP-RES-005
import erp.er.*
container c target polars {
    s = load(customer)
    s = filter(s, segment = 'vip')
}
